--- a/.github/workflows/interesting_exercises.yml
+++ b/.github/workflows/interesting_exercises.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [12.x,16.x,18.x]
 
     steps:
       - name: Checkout code
@@ -24,8 +24,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install packages with yarn
-        run: rm -rf node_modules && yarn install --frozen-lockfile
+      - name: Install packages with npm
+        run: rm -rf node_modules && npm install --frozen-lockfile
 
       - name: Build and deploy with gh-pages
         run: |
