--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,8 @@ on:
           -master
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: 18.x
-
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
